crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-tran-bjt_tran.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
TranSnapshot {
    times: [
        0.0,
        0.0001,
        0.0002,
        0.00030000000000000003,
        0.0004,
        0.0005,
        0.0006000000000000001,
        0.0007,
        0.0008,
        0.0009000000000000001,
        0.001,
    ],
    node_names: [
        "vcc",
        "c",
        "b",
        "e",
    ],
    source_names: [
        "Vcc",
        "Vb",
        "Ve",
    ],
    samples: [
        [
            5.0,
            4.9999999999999,
            0.0,
            0.0,
            -1.0061396160665481e-16,
            5.0000000000000036e-17,
            5.0000000000000036e-17,
        ],
        [
            5.0,
            4.942974278852483,
            0.7,
            0.0,
            -5.702572114751718e-5,
            -5.702572114241663e-7,
            5.759597835894065e-5,
        ],
        [
            5.0,
            4.942974278852483,
            0.7,
            0.0,
            -5.702572114751718e-5,
            -5.702572114241663e-7,
            5.759597835894065e-5,
        ],
        [
            5.0,
            4.942974278852483,
            0.7,
            0.0,
            -5.702572114751718e-5,
            -5.702572114241663e-7,
            5.759597835894065e-5,
        ],
        [
            5.0,
            4.942974278852483,
            0.7,
            0.0,
            -5.702572114751718e-5,
            -5.702572114241663e-7,
            5.759597835894065e-5,
        ],
        [
            5.0,
            4.942974278852483,
            0.7,
            0.0,
            -5.702572114751718e-5,
            -5.702572114241663e-7,
            5.759597835894065e-5,
        ],
        [
            5.0,
            4.9999999999999,
            0.0,
            0.0,
            -1.0061396160665481e-16,
            5.0000000000000036e-17,
            5.0000000000000036e-17,
        ],
        [
            5.0,
            4.9999999999999,
            0.0,
            0.0,
            -1.0061396160665481e-16,
            5.0000000000000036e-17,
            5.0000000000000036e-17,
        ],
        [
            5.0,
            4.9999999999999,
            0.0,
            0.0,
            -1.0061396160665481e-16,
            5.0000000000000036e-17,
            5.0000000000000036e-17,
        ],
        [
            5.0,
            4.9999999999999,
            0.0,
            0.0,
            -1.0061396160665481e-16,
            5.0000000000000036e-17,
            5.0000000000000036e-17,
        ],
        [
            5.0,
            4.9999999999999,
            0.0,
            0.0,
            -1.0061396160665481e-16,
            5.0000000000000036e-17,
            5.0000000000000036e-17,
        ],
    ],
    newton_iterations: [
        0,
        3,
        2,
        2,
        2,
        2,
        3,
        2,
        2,
        2,
        2,
    ],
}
