crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-tran-diode_tran.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
TranSnapshot {
    times: [
        0.0,
        0.0005,
        0.001,
        0.0015,
        0.002,
        0.0025,
        0.003,
        0.0035,
        0.004,
        0.0045000000000000005,
        0.005,
    ],
    node_names: [
        "in",
        "out",
    ],
    source_names: [
        "V1",
    ],
    samples: [
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            1.0,
            0.0008245787999146444,
            -2.473736399743936e-6,
        ],
        [
            1.0,
            0.0013657123099660787,
            -2.4479793300689488e-6,
        ],
        [
            1.0,
            0.0017208814769314063,
            -2.4312198108620604e-6,
        ],
        [
            1.0,
            0.0019540147436725615,
            -2.420281277154875e-6,
        ],
        [
            0.0,
            0.0013026764956987676,
            2.488204658597434e-16,
        ],
        [
            0.0,
            0.0008684509970769865,
            1.6657593712845049e-16,
        ],
        [
            0.0,
            0.0005789673313475373,
            1.1136123571004953e-16,
        ],
        [
            0.0,
            0.0003859782208735651,
            7.437930275190244e-17,
        ],
        [
            1.0,
            0.0010778677127233488,
            -2.4616466964229145e-6,
        ],
        [
            1.0,
            0.001531951999379489,
            -2.4401205726917657e-6,
        ],
    ],
    newton_iterations: [
        0,
        3,
        2,
        2,
        2,
        3,
        2,
        2,
        2,
        3,
        2,
    ],
}
