crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-tran-rc_charging.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
TranSnapshot {
    times: [
        0.0,
        0.001,
        0.002,
        0.003,
        0.004,
        0.005,
        0.006,
        0.007,
        0.008,
        0.009000000000000001,
        0.01,
    ],
    node_names: [
        "in",
        "out",
    ],
    source_names: [
        "V1",
    ],
    samples: [
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
        [
            5.0,
            5.0,
            0.0,
        ],
    ],
    newton_iterations: [
        0,
        2,
        2,
        2,
        2,
        2,
        2,
        2,
        2,
        2,
        2,
    ],
}
